# meson-examples

conan-deps/: .gitignore  README.md  conanfile.txt  dev-requirements.txt  meson.build
conan-deps/scripts/: build.sh  setup.sh
conan-deps/src/: main.cpp
simple-app/: README.md  dev-requirements.txt  meson.build
simple-app/src/: main.cpp
